--- a/index.html
+++ b/index.html
@@ -27,8 +27,67 @@
     content="Riad Kilani - Professional front-end developer and designer with 12+ years of experience. Specializing in modern web development, UI/UX design, and performance optimization." />
   <meta name="keywords" content="front-end developer, designer, JavaScript, React, PHP, portfolio, Riad Kilani" />
   <meta name="author" content="Riad Kilani" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://riadkilani.com/" />
 
-  <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
+  <!-- Preconnect to top 4 most critical origins only (Lighthouse limit) -->
+  <link rel="preconnect" href="https://use.typekit.net" crossorigin />
+  <link rel="preconnect" href="https://p.typekit.net" crossorigin />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://blog.riadkilani.com" crossorigin />
+  
+  <!-- Non-blocking font loading with media="print" trick -->
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap" onload="this.onload=null;this.rel='stylesheet'" />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" onload="this.onload=null;this.rel='stylesheet'" />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@900&display=swap" onload="this.onload=null;this.rel='stylesheet'" />
+  <link rel="preload" as="style" href="https://use.typekit.net/njn2mng.css" onload="this.onload=null;this.rel='stylesheet'" />
+  
+  <!-- Fallback for no-JS -->
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@900&display=swap" />
+    <link rel="stylesheet" href="https://use.typekit.net/njn2mng.css" />
+  </noscript>
+  
+  <!-- TypeKit font-display override - force swap on all variants -->
+  <style>
+    /* Override TypeKit fonts to use font-display: swap */
+    @font-face {
+      font-family: 'trajan-pro-3';
+      font-display: swap;
+      src: local('trajan-pro-3');
+    }
+    @font-face {
+      font-family: 'trajan-pro-3';
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+      src: local('trajan-pro-3');
+    }
+    @font-face {
+      font-family: 'trajan-pro-3';
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+      src: local('trajan-pro-3');
+    }
+    
+    /* Critical above-the-fold CSS - inline for immediate render */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; font-size: 1rem; line-height: 1.6; color: #333; }
+    .hero { position: relative; min-height: 60vh; display: flex; align-items: center; overflow: hidden; background: linear-gradient(135deg, #f4f3f4 0%, #fff 100%); }
+    .hero .container { position: relative; z-index: 1; display: flex; align-items: center; justify-content: space-between; gap: 50px; padding: 50px 40px; max-width: 1200px; margin: 0 auto; }
+    .hero-content { flex: 1; max-width: 600px; }
+    .hero-image { flex: 0 0 auto; }
+    .hero-image-wrapper { position: relative; width: 360px; height: 360px; border-radius: 50%; overflow: hidden; }
+    .hero-image-wrapper img { width: 100%; height: 100%; object-fit: cover; display: block; }
+  </style>
+
+  <!-- Defer Font Awesome loading to prevent render blocking -->
+  <link rel="preload" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+  <noscript><link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" /></noscript>
 </head>
 
 <body>
