made changes to some styles. Fixes to blog search

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="theme-color" content="#0073AA" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <title>Riad Kilani - Web Developer & Designer</title>
 
   <!-- Social Media Preview Image -->
   <meta property="og:title" content="Riad Kilani - Front-end Developer | React Specialist | UI/UX Modernist" />
   <meta property="og:description"
     content="Riad Kilani - Professional front-end developer and designer with 12+ years of experience. Specializing in modern web development, UI/UX design, and performance optimization." />
-  <meta property="og:image" content="https://riadkilani.com/assets/images/riad-kilani-profile.jpg" />
+  <meta property="og:image" content="https://riadkilani.com/assets/images/riadkilani-portfolio.png" />
   <meta property="og:url" content="https://riadkilani.com/" />
   <meta property="og:type" content="website" />
 
@@ -20,7 +23,7 @@
   <meta name="twitter:title" content="Riad Kilani - Front-end Developer | React Specialist | UI/UX Modernist" />
   <meta name="twitter:description"
     content="Riad Kilani - Professional front-end developer and designer with 12+ years of experience. Specializing in modern web development, UI/UX design, and performance optimization." />
-  <meta name="twitter:image" content="https://riadkilani.com/assets/images/riad-kilani-profile.jpg" />
+  <meta name="twitter:image" content="https://riadkilani.com/assets/images/riadkilani-portfolio.png" />
 
   <!-- SEO Meta Tags -->
   <meta name="description"
@@ -31,10 +34,17 @@
   <!-- Canonical URL -->
   <link rel="canonical" href="https://riadkilani.com/" />
 
+  <!-- DNS Prefetch for faster domain resolution -->
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+  <link rel="dns-prefetch" href="https://use.typekit.net" />
+  <link rel="dns-prefetch" href="https://p.typekit.net" />
+  <link rel="dns-prefetch" href="https://blog.riadkilani.com" />
+
   <!-- Preconnect to top 4 most critical origins only (Lighthouse limit) -->
-  <link rel="preconnect" href="https://use.typekit.net" crossorigin />
-  <link rel="preconnect" href="https://p.typekit.net" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://use.typekit.net" crossorigin />
   <link rel="preconnect" href="https://blog.riadkilani.com" crossorigin />
   
   <!-- Non-blocking font loading with media="print" trick -->
